<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/fab_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_daily_question"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/edit_input_daily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/how_much_cigar"
        android:textAlignment="center"
        android:inputType="number" />

    <Button
        android:id="@+id/submit_daily_input"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/submit_daily"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</LinearLayout>