<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smokeless.smokelessnewc.InfoKeuangan"
    android:gravity="center">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/money_logo"
                android:textAlignment="center"
                android:textColor="#66970a"
                android:textSize="70sp" />
            <TextView
                android:id="@+id/money_progress_text"
                android:layout_width="301dp"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/money_info"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="22sp" />
            <TextView
                android:id="@+id/biaya_rokok"
                android:layout_width="301dp"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="Rp. 12000"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="22sp" />

            <Button
                android:id="@+id/submit_money_progress"
                android:layout_width="301dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/money_submit"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />


        </LinearLayout>

</LinearLayout>
